# pugSV

./: LICENSE  README.md  pyproject.toml
pugsv/: __init__.py  aligncate.py  config.yaml  dataset.py  loss.py  model.py  preprocessing.py  tokenization.py  train.py  train_test.py
pugsv/utils/: config_utils.py  data_utils.py  io.py
